@@ -20,6 +20,9 @@
   (Nicolás Ojeda Bär)
 + Support CURL_NOPROXY.
   (Luke Palmer)
++ Get a list of headers with [get_headers] that result from repeatedly calling
+  [curl_easy_nextheader] with the supplied origins and request.
+  (Luke Palmer)
 
 ## 0.9.2 - 7 Jan 2022
 
